add get user endpoint for getting quota and authorized data
